# RayAdwaita

./: .gitignore  README.md  meson.build
build-aux/: ir.hajmousa.RayAdwaita.json
data/: ir.hajmousa.RayAdwaita.desktop.in  ir.hajmousa.RayAdwaita.gschema.xml  ir.hajmousa.RayAdwaita.metainfo.xml.in  ir.hajmousa.RayAdwaita.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: main.py  meson.build  rayadwaita.gresource.xml  rayadwaita.in  welcome.py  window.py
src/core/: config.py  url_parser.py
src/ui/: window.blp
